(fix): Add z-index to nav so its not hidden on startpage

--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -74,6 +74,7 @@
 .navigation {
   background-color: white;
   position: absolute;
+  z-index: 10;
   top: 5px;
   right: 5px;
   width: 12rem;
